# AcamarachiEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: config.h  macros.h  main.cpp  platform.h  types.h
src/Core/: CMakeLists.txt  Error.hpp  Expected.hpp  File.cpp  File.hpp  Slice.hpp
src/Core/Allocator/: FreeListAllocator.hpp  Interface.cpp  Interface.hpp  LinearAllocator.hpp
src/maths/: CMakeLists.txt  CmakeLists.txt  linear.cpp  linear.hpp  matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
src/vulkan/: Allocator.cpp  Allocator.hpp  CMakeLists.txt  Context.cpp  Context.hpp  Device.cpp  Device.hpp  Error.cpp  Error.hpp  FrameInformation.cpp  FrameInformation.hpp  GraphicPipeline.hpp  GraphicPipelineBuilder.cpp  GraphicPipelineBuilder.hpp  Instance.cpp  Instance.hpp  Queue.cpp  Queue.hpp  Result.hpp  ShaderModule.cpp  ShaderModule.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  Utils.cpp  Utils.hpp
